# what-may-become

./: Cargo.toml  Makefile  README.md
client/: Cargo.toml
client/src/: main.rs
client/src/module_bindings/: create_hero_reducer.rs  hero_table.rs  hero_type.rs  keep_table.rs  keep_type.rs  mod.rs  move_hero_reducer.rs  on_connect_reducer.rs  player_type.rs  town_table.rs  town_type.rs
client/src/ui/: mod.rs  opening_event.rs
docs/: vision.md
server/: Cargo.toml
server/src/: lib.rs
