[package]
name = "what-may-become-client"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
bevy = { version = "0.15", features = ["default"] }
bevy_spacetimedb = "0.3"
spacetimedb-sdk = "1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window"] }
